--- a/plugin-line/package.json
+++ b/plugin-line/package.json
@@ -1,21 +1,23 @@
 {
   "name": "plugin-line",
-  "version": "1.0.0",
-  "private": true,
+  "version": "1.0.3",
   "description": "ec-plugin-line",
   "author": "jing-rise deverloper",
   "files": [
     "index.js",
-    "index.d.ts"
+    "plugin-line.d.ts",
+    "libs"
   ],
-  "types": "index.d.ts",
+  "types": "plugin-line.d.ts",
   "scripts": {
     "dist": "node ci.js",
     "lint": "tslint --project . -c tslint.json"
   },
   "devDependencies": {
     "@types/node": "13.7.0",
+    "@types/shelljs": "0.8.6",
     "electron": "8.0.1",
+    "shelljs": "0.8.3",
     "tslib": "1.10.0",
     "tslint": "6.0.0",
     "typescript": "3.7.5"
