--- a/plugin-line/package.json
+++ b/plugin-line/package.json
@@ -1,6 +1,6 @@
 {
   "name": "plugin-line",
-  "version": "1.0.5",
+  "version": "1.1.0",
   "description": "ec-plugin-line",
   "author": "jing-rise deverloper",
   "files": [
@@ -14,7 +14,8 @@
     "lint": "tslint --project . -c tslint.json"
   },
   "dependencies": {
-    "shelljs": "0.8.3"
+    "shelljs": "0.8.3",
+    "adm-zip": "0.4.14"
   },
   "devDependencies": {
     "@types/node": "13.7.0",
