--- a/plugin-template/package.json
+++ b/plugin-template/package.json
@@ -1,8 +1,8 @@
 {
   "name": "view-menu",
   "version": "0.1.0",
-  "description": "这是一个用来管理view、window的菜单",
-  "homepage": "https://github.com/void-soul/egg-bag",
+  "description": "描述",
+  "homepage": "主页",
   "scripts": {
     "dist": "node ci.js",
     "lint": "vue-cli-service lint"
@@ -19,7 +19,6 @@
     "@vue/cli-service": "~4.2.0",
     "@vue/eslint-config-standard": "^5.1.0",
     "@vue/eslint-config-typescript": "^5.0.1",
-    "adm-zip": "0.4.14",
     "core-js": "^3.6.4",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.1",
@@ -27,7 +26,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.1.2",
-    "plugin-line": "^1.0.5",
+    "plugin-line": "1.0.6",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "typescript": "~3.7.5",
