--- a/plugin-template/package.json
+++ b/plugin-template/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "view-menu",
-  "version": "0.1.0",
+  "name": "plugin-template",
+  "version": "0.0.1",
   "description": "描述",
   "homepage": "主页",
   "scripts": {
-    "dist": "node ci.js",
+    "dist": "line build",
     "lint": "vue-cli-service lint"
   },
   "devDependencies": {
-    "@types/firefox-webext-browser": "^67.0.2",
     "@typescript-eslint/eslint-plugin": "^2.18.0",
     "@typescript-eslint/parser": "^2.18.0",
     "@vue/cli-plugin-babel": "~4.2.0",
@@ -26,7 +25,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.1.2",
-    "plugin-line": "1.0.6",
+    "plugin-line": "1.1.7",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "typescript": "~3.7.5",
