--- a/br/package.json
+++ b/br/package.json
@@ -58,9 +58,16 @@
     "@types/sharp": "0.24.0",
     "@types/socket.io-client": "1.4.32",
     "@types/sqlite3": "3.1.6",
+    "@typescript-eslint/eslint-plugin": "^2.18.0",
+    "@typescript-eslint/parser": "^2.18.0",
     "@vue/cli-plugin-babel": "4.2.2",
+    "@vue/cli-plugin-eslint": "~4.2.0",
+    "@vue/cli-plugin-router": "~4.2.0",
     "@vue/cli-plugin-typescript": "4.2.2",
+    "@vue/cli-plugin-vuex": "~4.2.0",
     "@vue/cli-service": "4.2.2",
+    "@vue/eslint-config-standard": "^5.1.0",
+    "@vue/eslint-config-typescript": "^5.0.1",
     "animate.css": "3.7.2",
     "babel-plugin-transform-imports": "2.0.0",
     "core-js": "3.6.4",
@@ -69,12 +76,16 @@
     "electron-store": "5.1.0",
     "electron-updater": "4.2.2",
     "node-abi": "2.15.0",
-    "plugin-line": "1.1.1",
+    "plugin-line": "1.1.7",
     "quasar": "1.9.3",
     "stylus": "0.54.7",
     "stylus-loader": "3.0.2",
-    "tslint": "6.0.0",
-    "tslint-slick": "5.0.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-import": "2.20.1",
+    "eslint-plugin-node": "11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-vue": "^6.1.2",
     "typescript": "3.7.5",
     "vue": "2.6.11",
     "vue-cli-plugin-electron-builder": "1.4.5",
