--- a/br/package.json
+++ b/br/package.json
@@ -14,13 +14,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@sentry/electron": "1.2.0",
-    "better-sqlite3": "5.4.3",
+    "@sentry/electron": "1.2.1",
+    "axios": "0.19.2",
+    "better-sqlite3": "6.0.1",
     "bufferutil": "4.0.1",
     "cheerio": "1.0.0-rc.3",
     "decimal.js": "10.2.0",
     "descartes-sku.js": "1.4.0",
-    "file-type": "14.1.2",
+    "file-type": "14.1.3",
     "filereader": "0.10.3",
     "html-entities": "1.2.1",
     "icojs": "0.14.0",
@@ -43,6 +44,7 @@
     "xlsx": "0.15.5"
   },
   "devDependencies": {
+    "@quasar/extras": "1.5.2",
     "@types/better-sqlite3": "5.4.0",
     "@types/cheerio": "0.22.16",
     "@types/html-entities": "1.2.16",
@@ -51,40 +53,41 @@
     "@types/md5-file": "4.0.1",
     "@types/mime-types": "2.1.0",
     "@types/nanoid": "2.1.0",
-    "@types/node": "12.12.6",
+    "@types/node": "13.7.7",
     "@types/puppeteer-core": "2.0.0",
     "@types/sharp": "0.24.0",
     "@types/socket.io-client": "1.4.32",
     "@types/sqlite3": "3.1.6",
-    "@typescript-eslint/eslint-plugin": "^2.18.0",
-    "@typescript-eslint/parser": "^2.18.0",
-    "@vue/cli-plugin-babel": "4.2.2",
-    "@vue/cli-plugin-eslint": "~4.2.0",
-    "@vue/cli-plugin-router": "~4.2.0",
-    "@vue/cli-plugin-typescript": "4.2.2",
-    "@vue/cli-plugin-vuex": "~4.2.0",
-    "@vue/cli-service": "4.2.2",
-    "@vue/eslint-config-standard": "^5.1.0",
-    "@vue/eslint-config-typescript": "^5.0.1",
+    "@typescript-eslint/eslint-plugin": "2.21.0",
+    "@typescript-eslint/parser": "2.21.0",
+    "@vue/cli-plugin-babel": "4.2.3",
+    "@vue/cli-plugin-eslint": "4.2.3",
+    "@vue/cli-plugin-router": "4.2.3",
+    "@vue/cli-plugin-typescript": "4.2.3",
+    "@vue/cli-plugin-vuex": "4.2.3",
+    "@vue/cli-service": "4.2.3",
+    "@vue/eslint-config-standard": "5.1.2",
+    "@vue/eslint-config-typescript": "5.0.2",
     "babel-plugin-transform-imports": "2.0.0",
     "core-js": "3.6.4",
-    "electron": "8.0.1",
-    "electron-log": "4.0.6",
-    "electron-store": "5.1.0",
+    "electron": "8.0.2",
+    "electron-log": "4.0.7",
+    "electron-store": "5.1.1",
     "electron-updater": "4.2.2",
-    "node-abi": "2.15.0",
-    "plugin-line": "1.1.7",
-    "eslint": "^6.7.2",
+    "eslint": "6.8.0",
     "eslint-plugin-import": "2.20.1",
     "eslint-plugin-node": "11.0.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^6.1.2",
-    "typescript": "3.7.5",
+    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-standard": "4.0.1",
+    "eslint-plugin-vue": "6.2.1",
+    "node-abi": "2.15.0",
+    "plugin-line": "1.1.7",
+    "quasar": "1.9.6",
+    "typescript": "3.8.3",
     "vue": "2.6.11",
     "vue-cli-plugin-electron-builder": "1.4.5",
     "vue-cli-plugin-quasar": "2.0.0",
-    "vue-router": "3.1.5",
+    "vue-router": "3.1.6",
     "vue-template-compiler": "2.6.11",
     "vuex": "3.1.2",
     "webpack-merge": "4.2.2"
