--- a/plugin-line/package.json
+++ b/plugin-line/package.json
@@ -1,6 +1,6 @@
 {
   "name": "plugin-line",
-  "version": "1.1.7",
+  "version": "1.1.8",
   "description": "ec-plugin-line",
   "author": "jing-rise deverloper",
   "files": [
@@ -11,7 +11,7 @@
   "types": "plugin-line.d.ts",
   "scripts": {
     "dist": "node ci.js",
-    "lint": "tslint --project . -c tslint.json"
+    "lint": "eslint **/*.ts"
   },
   "bin": {
     "line": "./libs/cli/index.js"
@@ -23,8 +23,14 @@
   "devDependencies": {
     "@types/node": "13.7.0",
     "@types/shelljs": "0.8.6",
-    "tslib": "1.10.0",
-    "tslint": "6.0.0",
-    "typescript": "3.7.5"
+    "tslib": "1.11.1",
+    "typescript": "3.8.3",
+    "eslint": "6.8.0",
+    "eslint-plugin-import": "2.20.1",
+    "eslint-plugin-node": "11.0.0",
+    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-standard": "4.0.1",
+    "@typescript-eslint/eslint-plugin": "2.21.0",
+    "@typescript-eslint/parser": "2.21.0"
   }
 }
