--- a/plugin-template/tsconfig.json
+++ b/plugin-template/tsconfig.json
@@ -27,5 +27,5 @@
     "inlineSourceMap": false
   },
   "include": ["src/index.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "**/*.js"]
 }
