调整了br项目的依赖

--- a/br/.npmrc
+++ b/br/.npmrc
@@ -7,11 +7,11 @@ PUPPETEER_DOWNLOAD_HOST=https://dmce.emeker.com/release/
 SQLITE3_BINARY_SITE=http://npm.taobao.org/mirrors/sqlite3
 PYTHON_MIRROR=http://npm.taobao.org/mirrors/python
 PUPPETEER_CHROMIUM_REVISION=609904
-disturl=https://atom.io/download/electron
+disturl=https://electronjs.org/headers
 runtime=electron
 build_from_source=true
 HOME=~/.electron-gyp npm install
-target=3.0.15
+target=8.0.2
 arch=x64
 #arch=armv7l
 target_arch=x64
