--- a/plugin-line/package.json
+++ b/plugin-line/package.json
@@ -1,6 +1,6 @@
 {
   "name": "plugin-line",
-  "version": "1.1.8",
+  "version": "1.1.10",
   "description": "ec-plugin-line",
   "author": "jing-rise deverloper",
   "files": [
@@ -17,20 +17,20 @@
     "line": "./libs/cli/index.js"
   },
   "dependencies": {
-    "shelljs": "0.8.3",
-    "adm-zip": "0.4.14"
+    "adm-zip": "0.4.14",
+    "shelljs": "0.8.3"
   },
   "devDependencies": {
     "@types/node": "13.7.0",
     "@types/shelljs": "0.8.6",
-    "tslib": "1.11.1",
-    "typescript": "3.8.3",
+    "@typescript-eslint/eslint-plugin": "2.21.0",
+    "@typescript-eslint/parser": "2.21.0",
     "eslint": "6.8.0",
     "eslint-plugin-import": "2.20.1",
     "eslint-plugin-node": "11.0.0",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-standard": "4.0.1",
-    "@typescript-eslint/eslint-plugin": "2.21.0",
-    "@typescript-eslint/parser": "2.21.0"
+    "tslib": "1.11.1",
+    "typescript": "3.8.3"
   }
 }
