--- a/br/package.json
+++ b/br/package.json
@@ -17,7 +17,6 @@
     "@sentry/electron": "1.2.1",
     "axios": "0.19.2",
     "better-sqlite3": "6.0.1",
-    "sqlite3": "4.1.1",
     "cheerio": "1.0.0-rc.3",
     "decimal.js": "10.2.0",
     "descartes-sku.js": "1.4.0",
@@ -39,19 +38,20 @@
     "sharp": "0.24.1",
     "socket.io-client": "2.3.0",
     "sortablejs": "1.10.2",
+    "sqlite3": "4.1.1",
     "xlsx": "0.15.5"
   },
   "devDependencies": {
     "@quasar/extras": "1.5.2",
+    "@types/better-sqlite3": "5.4.0",
     "@types/cheerio": "0.22.16",
     "@types/html-entities": "1.2.16",
-    "@types/better-sqlite3": "5.4.0",
     "@types/lodash.clonedeep": "4.5.6",
     "@types/md5": "2.1.33",
     "@types/md5-file": "4.0.1",
     "@types/mime-types": "2.1.0",
     "@types/nanoid": "2.1.0",
-    "@types/node": "13.7.7",
+    "@types/node": "12.12.29",
     "@types/puppeteer-core": "2.0.0",
     "@types/sharp": "0.24.0",
     "@types/socket.io-client": "1.4.32",
@@ -66,9 +66,8 @@
     "@vue/cli-service": "4.2.3",
     "@vue/eslint-config-standard": "5.1.2",
     "@vue/eslint-config-typescript": "5.0.2",
-    "babel-plugin-transform-imports": "2.0.0",
     "core-js": "3.6.4",
-    "electron": "8.0.2",
+    "electron": "8.0.3",
     "electron-log": "4.0.7",
     "electron-store": "5.1.1",
     "electron-updater": "4.2.2",
@@ -78,24 +77,19 @@
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-standard": "4.0.1",
     "eslint-plugin-vue": "6.2.1",
-    "node-abi": "2.15.0",
-    "plugin-line": "1.1.8",
+    "plugin-line": "1.1.14",
     "quasar": "1.9.6",
+    "stylus": "0.54.7",
+    "stylus-loader": "3.0.2",
     "typescript": "3.8.3",
     "vue": "2.6.11",
     "vue-cli-plugin-electron-builder": "1.4.5",
     "vue-cli-plugin-quasar": "2.0.0",
     "vue-router": "3.1.6",
     "vue-template-compiler": "2.6.11",
-    "vuex": "3.1.2",
-    "webpack-merge": "4.2.2"
+    "vuex": "3.1.2"
   },
   "engines": {
-    "node": ">= 10.11"
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
+    "node": ">= 13.0"
   }
 }
