--- a/br/tsconfig.json
+++ b/br/tsconfig.json
@@ -20,12 +20,7 @@
     "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
   },
   "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx",
-    "src/**/*.d.ts",
-    "src/**/*.vue",
-    "tests/**/*.ts",
-    "tests/**/*.tsx"
+    "src/**/*.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules/**/*.ts"]
 }
