--- a/plugin-template/package.json
+++ b/plugin-template/package.json
@@ -25,7 +25,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.1.2",
-    "plugin-line": "1.1.13",
+    "plugin-line": "1.1.15",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "typescript": "~3.7.5",
@@ -42,5 +42,6 @@
   "login": false,
   "required": true,
   "rule": "*",
-  "title": "view菜单"
+  "title": "view菜单",
+  "creatDb": false
 }
