--- a/bs/package.json
+++ b/bs/package.json
@@ -27,11 +27,10 @@
     "lodash.clonedeep": "4.5.0",
     "sharp": "0.24.1",
     "socket.io-client": "2.3.0",
-    "sqlite3": "4.1.1",
+    "sql-man": "1.0.1",
     "xlsx": "0.15.5"
   },
   "devDependencies": {
-    "source-map-support": "0.5.16",
     "@types/better-sqlite3": "5.4.0",
     "@types/cheerio": "0.22.16",
     "@types/html-entities": "1.2.16",
@@ -61,6 +60,7 @@
     "eslint-plugin-standard": "4.0.1",
     "plugin-line": "1.1.15",
     "shelljs": "0.8.3",
+    "source-map-support": "0.5.16",
     "typescript": "^3.8.3",
     "webpack": "~4.42.0"
   }
